--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,11 +14,13 @@
 
         <ImageButton
             android:id="@+id/imageButton"
-            android:layout_width="81dp"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
             android:layout_weight="1"
             android:contentDescription="@string/todo"
-            android:src="@drawable/mark" />
+            android:src="@drawable/logo"
+            android:scaleType="centerInside"
+            android:adjustViewBounds="true"/>
 
         <Space
             android:layout_width="92dp"
