--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,10 +50,14 @@
             android:id="@+id/mapview"
             android:layout_width="333dp"
             android:layout_height="592dp"
-            android:layout_marginStart="36dp"
-            android:layout_marginLeft="36dp"
+            android:layout_marginStart="39dp"
+            android:layout_marginLeft="39dp"
             android:layout_marginTop="28dp"
+            android:layout_marginEnd="39dp"
+            android:layout_marginRight="39dp"
             android:layout_weight="1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
