--- a/app/src/main/res/layout/activity_ber2.xml
+++ b/app/src/main/res/layout/activity_ber2.xml
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageButton
-            android:id="@+id/imageButton"
+            android:id="@+id/logo"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
@@ -30,17 +30,10 @@
         <Space
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="3" />
 
         <Button
-            android:id="@+id/button2"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:text="@string/home" />
-
-        <Button
-            android:id="@+id/button3"
+            android:id="@+id/contacts"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
