--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -29,14 +29,7 @@
         <Space
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
-        <Button
-            android:id="@+id/home"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:text="@string/home" />
+            android:layout_weight="3" />
 
         <Button
             android:id="@+id/contacts"
@@ -50,8 +43,8 @@
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="50dp"
         app:layout_constraintBottom_toTopOf="@id/footer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -72,8 +65,8 @@
                     android:id="@+id/imageViewOne"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_margin="15dp"
+                    android:layout_weight="1"
                     android:adjustViewBounds="true"
                     android:scaleType="fitStart"
                     app:srcCompat="@drawable/skotnikova" />
@@ -106,8 +99,8 @@
                     android:id="@+id/imageViewTwo"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_margin="15dp"
+                    android:layout_weight="1"
                     android:adjustViewBounds="true"
                     android:scaleType="fitStart"
                     app:srcCompat="@drawable/pictureofme" />
@@ -123,11 +116,11 @@
                     android:id="@+id/imageViewThree"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_margin="15dp"
+                    android:layout_weight="1"
                     android:adjustViewBounds="true"
                     android:scaleType="fitStart"
-                    app:srcCompat="@drawable/zhimolost2" />
+                    app:srcCompat="@android:drawable/sym_def_app_icon" />
 
                 <TextView
                     android:id="@+id/textViewThree"
